# qucsator

./: .clang-format  .gitignore  CMakeLists.txt  README
src/: .gitignore  CMakeLists.txt  acsolver.cpp  acsolver.h  analyses.h  analysis.cpp  applications.h  characteristic.h  check_citi.cpp  check_citi.h  check_csv.cpp  check_csv.h  check_dataset.cpp  check_mdl.cpp  check_mdl.h  check_netlist.cpp  check_touchstone.cpp  check_touchstone.h  check_zvr.cpp  circuit.cpp  circuit.h  compat.h  config.h  constants.h  consts.h  dataset.cpp  dataset.h  dcsolver.cpp  dcsolver.h  devstates.cpp  devstates.h  differentiate.cpp  differentiate.h  environment.cpp  environment.h  eqnsys.cpp  eqnsys.h  equation.cpp  equation.h  evaluate.cpp  (+92 more)
src/analyses/: CMakeLists.txt  acsolver.cpp  acsolver.h  analyses.h  analysis.cpp  analysis.h  dcsolver.cpp  dcsolver.h  hbsolver.cpp  hbsolver.h  nasolution.h  nasolver.cpp  nasolver.h  parasweep.cpp  parasweep.h  spsolver.cpp  spsolver.h  trsolver.cpp  trsolver.h  trsolver_dc.cpp
src/components/: CMakeLists.txt  amplifier.cpp  amplifier.h  attenuator.cpp  attenuator.h  biastee.cpp  biastee.h  capacitor.cpp  capacitor.h  capq.cpp  capq.h  cccs.cpp  cccs.h  ccvs.cpp  ccvs.h  circline.cpp  circline.h  circulator.cpp  circulator.h  coaxline.cpp  coaxline.h  component.h  component_id.h  components.h  coupler.cpp  coupler.h  cross.cpp  ctline.cpp  ctline.h  dcblock.cpp  dcblock.h  dcfeed.cpp  dcfeed.h  ecvs.cpp  ecvs.h  ground.cpp  gyrator.cpp  gyrator.h  hybrid.cpp  iac.cpp  (+96 more)
src/components/devices/: CMakeLists.txt  bjt.cpp  bjt.h  device.cpp  device.h  diac.cpp  diac.h  diode.cpp  diode.h  eqndefined.cpp  eqndefined.h  jfet.cpp  jfet.h  mosfet.cpp  mosfet.h  thyristor.cpp  thyristor.h  triac.cpp  triac.h  tunneldiode.cpp  tunneldiode.h
src/components/digital/: CMakeLists.txt  and.cpp  and.h  buffer.cpp  buffer.h  digisource.cpp  digisource.h  digital.cpp  digital.h  inverter.cpp  inverter.h  nand.cpp  nand.h  nor.cpp  nor.h  or.cpp  or.h  xnor.cpp  xnor.h  xor.cpp  xor.h
src/components/helpers/: CMakeLists.txt  cross.h  ground.h  itrafo.h  open.h  short.cpp  tee.cpp  tee.h
src/components/linear/: CMakeLists.txt  amplifier.h  attenuator.h  biastee.cpp  capacitor.cpp  capacitor.h  capq.h  dcblock.cpp  dcblock.h  dcfeed.cpp  gyrator.h  hybrid.cpp  hybrid.h  indq.cpp  indq.h  inductor.cpp  inductor.h  isolator.h  mutual.cpp  mutual.h  mutual2.h  mutualx.cpp  mutualx.h  phaseshifter.h  relais.h  resistor.cpp  resistor.h  tswitch.cpp
src/components/microstrip/: CMakeLists.txt  bondwire.cpp  bondwire.h  circularloop.cpp  circularloop.h  cpwgap.cpp  cpwgap.h  cpwline.cpp  cpwline.h  cpwopen.cpp  cpwopen.h  cpwshort.cpp  cpwshort.h  cpwstep.cpp  cpwstep.h  mscorner.cpp  mscorner.h  mscoupled.cpp  mscoupled.h  mscross.cpp  mscross.h  msgap.cpp  msgap.h  mslange.cpp  mslange.h  msline.cpp  msline.h  msmbend.cpp  msmbend.h  msopen.cpp  msopen.h  msrstub.cpp  msrstub.h  msstep.cpp  msstep.h  mstee.cpp  mstee.h  msvia.cpp  msvia.h  spiralinductor.cpp  (+3 more)
src/components/noise/: CMakeLists.txt  iinoise.cpp  iinoise.h  ivnoise.cpp  ivnoise.h  vnoise.h  vvnoise.cpp  vvnoise.h
src/components/nonlinear/: CMakeLists.txt  device.cpp  device.h  diac.h  diode.cpp  diode.h  eqndefined.cpp  eqndefined.h  mosfet.cpp  mosfet.h  opamp.cpp  thyristor.cpp  thyristor.h  triac.cpp  triac.h  tunneldiode.cpp  tunneldiode.h
src/components/probes/: CMakeLists.txt  iprobe.cpp  iprobe.h  vprobe.cpp  vprobe.h
src/components/sources/: CMakeLists.txt  cccs.cpp  cccs.h  ccvs.cpp  idc.cpp  idc.h  iexp.cpp  iexp.h  ifile.cpp  ifile.h  ipulse.h  irect.h  vam.cpp  vccs.h  vdc.h  vexp.cpp  vexp.h  vfile.h  vpm.cpp  vpulse.cpp  vpulse.h  vrect.h
src/components/verilog/: .gitignore  CMakeLists.txt  analogfunction.xml  cpp2lib.makefile  qucsMODULEcore.xml
src/converter/: .gitignore  CMakeLists.txt  check_spice.cpp  check_spice.h  check_vcd.cpp  check_vcd.h  csv_producer.cpp  csv_producer.h  matlab_producer.cpp  matlab_producer.h  parse_spice.ypp  parse_vcd.ypp  qucs_producer.cpp  qucs_producer.h  qucsconv.cpp  scan_spice.lpp  scan_vcd.lpp  touchstone_producer.cpp  touchstone_producer.h
src/interface/: CMakeLists.txt  e_trsolver.cpp  e_trsolver.h  qucs_interface.cpp  qucs_interface.h  qucstrsolversetup.m
src/math/: CMakeLists.txt  cbesselj.cpp  complex.cpp  complex.h  fspecial.cpp  fspecial.h  interpolator.cpp  interpolator.h  matrix.cpp  matrix.h  poly.h  precision.h  real.cpp  real.h  spline.cpp  spline.h  tmatrix.cpp  tmatrix.h  tridiag.h  tvector.cpp  tvector.h
src/parsers/: .gitignore  CMakeLists.txt  check_citi.cpp  check_csv.cpp  check_dataset.cpp  check_dataset.h  check_mdl.cpp  check_netlist.cpp  check_netlist.h  check_touchstone.cpp  check_zvr.cpp  check_zvr.h  parse_citi.ypp  parse_csv.ypp  parse_dataset.ypp  parse_mdl.ypp  parse_netlist.ypp  parse_touchstone.ypp  parse_zvr.ypp  scan_citi.lpp  scan_csv.lpp  scan_dataset.lpp  scan_mdl.lpp  scan_netlist.lpp  scan_touchstone.lpp  scan_zvr.lpp
